SET(TARGET_TARGETNAME
    ${EXAMPLE_PREFIX}glow
)

SET(TARGET_SRC 
    glow.cpp
)
#SET(TARGET_H 
#	dofppu.h
#    osgteapot.h
#)
#### end var setup  ###

ADD_EXECUTABLE(${TARGET_TARGETNAME} ${TARGET_SRC} ${TARGET_H})
LINK_INTERNAL(${TARGET_TARGETNAME} osgPPU)
LINK_WITH_VARIABLES(${TARGET_TARGETNAME}     
    OSGVIEWER_LIBRARY
    OSGDB_LIBRARY
    OSGGA_LIBRARY
    OSGTEXT_LIBRARY
    OSGUTIL_LIBRARY
    OSG_LIBRARY
    OPENTHREADS_LIBRARY
)
##LINK_EXTERNAL(${TARGET_TARGETNAME} ${OPENGL_LIBRARIES}) 
##LINK_WITH_VARIABLES(${TARGET_TARGETNAME} OPENTHREADS_LIBRARY)
IF (NOT DYNAMIC_OSGPPU)
    LINK_EXTERNAL(${TARGET_TARGETNAME} pthread) 
ENDIF(NOT DYNAMIC_OSGPPU)

SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES DEBUG_POSTFIX "d")
if(MSVC)
	SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES PREFIX "../")
	SET_TARGET_PROPERTIES(${TARGET_TARGETNAME} PROPERTIES PROJECT_LABEL "Example ${TARGET_TARGETNAME}")
endif(MSVC)
